2019-12-27 mxtune-1.12.2-0.7.0-beta.9
Update to forge 14.23.5.2847
Previous forge version fails to build in a CI environment. e.g. ./gradlew setupCIWorkspace -s

----
2019-12-27 mxtune-1.12.2-0.7.0-beta.8
Update to forge 14.23.5.2846

----
2019-09-15 mxtune-1.12.2-0.7.0-beta.7
Fixes:
 * GitHub #3: NullPointerException in Jam Overlay: java.lang.NullPointerException
   at net.aeronica.mods.mxtune.gui.hud.GuiJamOverlay.processGroup(GuiJamOverlay.java:258)
   Properly check for null entity when using World#getEntityByID.

----
2019-09-01 mxtune-1.12.2-0.7.0-beta.6

Fixes:
 * CF #19: Client Crash - CME- mxtune.util.MXTuneRuntimeException: java.util.ConcurrentModificationException
   Added a synchronized block around the ModelLoaderRegistry#getModel method call in the spinet piano renderer.

Additions:
 * Add a title field to the PlayList class record. Update the playlist
   management GUI to allow adding/editing/saving the title. Update the
   ClientPlayManager class to display the playlist title as an onscreen
   notification when the player enters a chunk (chunk playlist change).

----
2019-06-11 mxtune-1.12.2-0.7.0-beta.5

Fixes:
 * GitHub #1: Crash when Mechanical User tries to trade with Player
   Corrected logic in the GroupManager EntityInteract event. If this does not solve the issue, then I also added a
   General Config Option "Disable JAM Party Right Click" to prevent the event from firing. This also  disables the
   JAM/Party management gui that is tied by default to the "J" key-bind. This disables multi-player music.

Changes:
 * Added client side config options to disable vanilla background music.

 * The "Music Paper" gui for pasting MML has some new features. It can now import 3MLE .mml files. A Huge Thank You
   to たんらる (https://twitter.com/fourthline) for allowing me to use the 3MLE reader code from fourthline/mmlTools.
   If the .mml file contains multiple instrument parts, i.e. 2-n person JAMS then it will attempt create a tab for