@@ -196,14 +196,15 @@ mxtune.gui.GuiChunkTool.title=Chunk Tool
 mxtune.gui.GuiGroup.title=Jam Session
 mxtune.gui.GuiGroupJoin.title=Join this Group?
 mxtune.gui.GuiGuiMultiInstChooser.title=Instrument Chooser
+mxtune.gui.bandAmp.sneakHelp=Sneak for Help
 mxtune.gui.bandAmp.leftOutputButton.disabled=Output Disabled
 mxtune.gui.bandAmp.leftOutputButton.enabled=Output Enabled
 mxtune.gui.bandAmp.leftOutputButton.help01=Leftside Redstone Output Toggle
 mxtune.gui.bandAmp.leftOutputButton.help02=Enables or Disables Redstone Output from the Leftside.
 mxtune.gui.bandAmp.leftOutputButton.help03=Outputs a single 10 tick pulse at the end of a song.
 mxtune.gui.bandAmp.lockButton.help01=Lock
-mxtune.gui.bandAmp.lockButton.help02=[Unlocked]: Top and Bottom inventory access is enabled. Non-owners can view contents. Start playing by SHIFT RIGHT-CLICK-ing the block.
-mxtune.gui.bandAmp.lockButton.help03=[Locked]: Top and Bottom inventory access is disabled. Non-owners cannot view contents. Non owners can start playing by RIGHT-CLICK-ing the block.
+mxtune.gui.bandAmp.lockButton.help02=[Unlocked]: Top and Bottom inventory access is enabled. Non-owners can view contents. View contents by SHIFT RIGHT-CLICK-ing the block.
+mxtune.gui.bandAmp.lockButton.help03=[Locked]: Top and Bottom inventory access is disabled. Non-owners cannot view contents.
 mxtune.gui.bandAmp.lockButton.locked=Locked
 mxtune.gui.bandAmp.lockButton.unLocked=Unlocked
 mxtune.gui.bandAmp.rearInputButton.disabled=Input Disabled
@@ -347,5 +348,5 @@ mxtune.status.mml_server_side_validation_failure=MML server side validation fail
 mxtune.subtitle.pcm-proxy=Music Plays
 mxtune.warning.set_server_data_not_allowed="You don't have permission to update server files."
 soundCategory.mxtune=mxTune
-tile.mxtune:band_amp.help=Once placed in the world, right click to open inventory. Add up to 12 instruments loaded with sheet music. Activate using a button, or sneak + right click.
+tile.mxtune:band_amp.help=When placed in the world, right click to open inventory. Add up to 12 instruments loaded with sheet music. Activate using a button/redstone on the backside, or sneak + right click. NOTE: The Load/Play, sneak + right click, is reversed if the Band Amp is Locked.
 tile.mxtune:band_amp.name=Band Amp
